fix weird bug where login title appeared cut off after signing out

--- a/frontend/src/styles/LogReg.css
+++ b/frontend/src/styles/LogReg.css
@@ -87,7 +87,6 @@ body {
 /* --- TITLES --- */
 .login-title--main,
 .login-title {
-  white-space: nowrap;
   font-size: 3.5rem;
   font-weight: 700;
   line-height: 1.3;
